# osparc-filecomms-old

./: .gitignore  CHANGELOG.md  LICENSE.txt  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: deploy.yml  test.yml
src/: __init__.py  _version.py  handshakers.py  handshakes.py  osparc_filecomms.py
tests/: test_handshake.py  test_handshake_functional.py
tests/functional/: test_handshake_functional.py
tests/unit/: test_handshake.py
