[project]
name = "osparc_filecomms"
description = "oSparc file communications"
dynamic = ["version"]
authors = [
    {name="Werner Van Geit @ IT'IS Zurich"}
]
license={file="LICENSE.txt"}
readme="README.md"

[build-system]
requires=["setuptools","setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["osparc_filecomms"]
package-dir = {"osparc_filecomms" = "src"}

[tool.setuptools_scm]
version_file = "src/_version.py"
local_scheme = "no-local-version"

[project.optional-dependencies]
test = ["pytest", "pytest-mock"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.distutils.bdist_wheel]
universal = true
